fix: adjust products li width and vertical-align

--- a/products/products.css
+++ b/products/products.css
@@ -1,4 +1,4 @@
-.products{
+.products {
     width: 1024px;
     margin: 0 auto;
     padding: 50px 0;
@@ -7,7 +7,7 @@
 .products li{
     display: inline-block;
     text-align: center;
-    width:30%
+    width:30%;
     vertical-align: top;
     margin: 0 1.5%;
 }
